[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ethstaker_deposit"]

[tool.setuptools.dynamic]
version = {attr = "ethstaker_deposit.__version__"}

[tool.pip-tools]
generate-hashes = true
no-annotate = true

[tool.ruff]
preview = true
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]

[project]
name = "ethstaker_deposit"
description = "Secure key generation for deposits"
readme = "README.md"
dependencies = [
    "click==8.1.8",
    "eth-typing==5.2.0",
    "eth-utils==5.2.0",
    "pycryptodome==3.22.0",
    "pyperclip==1.9.0",
    "py-ecc==7.0.1",
    "ssz==0.5.2",
    "cached-property==2.0.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cytoolz==1.0.1",
    "eth-hash==0.7.1",
    "hexbytes==1.3.0",
    "lru-dict==1.3.0",
    "pyrsistent==0.20.0",
    "six==1.17.0",
    "toolz==1.0.0",
    "typing-extensions==4.13.2",
]
requires-python = ">=3.9,<4"
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "exceptiongroup==1.2.2",
    "jsonschema==4.23.0",
    "mypy==1.15.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "coverage==7.8.0",
    "tomli==2.2.1",
    "attrs==25.3.0",
    "iniconfig==2.1.0",
    "jsonschema-specifications==2024.10.1",
    "mypy-extensions==1.0.0",
    "packaging==25.0",
    "pluggy==1.5.0",
    "referencing==0.36.2",
    "rpds-py==0.24.0",
    "typing-extensions==4.13.2",
    "ruff==0.11.6",
]

[project.urls]
"Homepage" = "https://github.com/eth-educators/ethstaker-deposit-cli"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
]
